# FiscFox

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Modelfile  README.md  desktop.py  docker-compose.yml  fiscfox.spec  pyproject.toml  tailwind.config.js
assets/: README.md  fiscfox.desktop  icon.icns
docs/: ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  FEATURES.md  LLM_INTEGRATION.md  README.md  TAX_REFERENCE.md
scripts/: seed_database.py
src/: __init__.py  main.py
src/core/: __init__.py  cache.py  exceptions.py  i18n.py  models.py
src/core/extraction/: __init__.py  expense_models.py  expense_ocr.py  extractor.py  models.py  ocr_extractor.py  patterns.py  text_extractor.py
src/core/tax/: __init__.py  afa.py  deadlines.py  einkommensteuer.py  geschenke.py  health_insurance.py  reisekosten.py  umsatzsteuer.py
src/db/: __init__.py  repository.py  schema.sql  schema_rag.sql  seed_data.py
src/db/migrations/: 001_add_deleted_at.sql
src/llm/: __init__.py  config.py  embeddings.py  exceptions.py  ingestion.py  manager.py  ollama_backend.py  orchestrator.py  reranker.py  retrieval.py  router.py  schemas.py  service.py  structured.py  tools.py
src/llm/agents/: __init__.py  assistant.py  tax_rag.py  text2sql.py
src/ml/: __init__.py  base.py  features.py  models.py  tabpfn_wrapper.py
src/web/: __init__.py  exception_handlers.py
src/web/middleware/: __init__.py  rate_limit.py
src/web/models/: __init__.py  reports.py
src/web/routes/: __init__.py  assets.py  bewirtung.py  clients.py  dashboard.py  expenses.py  gifts.py  health_insurance.py  homeoffice.py  invoices.py  llm.py  pages.py  settings.py  travel.py  upload.py
src/web/services/: __init__.py  asset.py  bewirtung.py  client.py  dashboard.py  elster.py  expense.py  expense_ocr.py  gift.py  health_insurance.py  homeoffice.py  invoice.py  ml_cashflow.py  ml_expense.py  ml_invoice_risk.py  ml_tax_estimate.py  report.py  travel.py  upload.py
src/web/static/css/: fonts.css  input.css  tailwind.css
src/web/templates/: base.html
src/web/templates/components/: _nav.html
src/web/templates/pages/: clients.html  dashboard.html  expenses.html  health_insurance.html  invoices.html  reports.html  settings.html  taxes.html
src/web/templates/partials/: _ai_afa_suggestion.html  _ai_chat.html  _ai_message.html  _ai_sql_result.html  _annual_preview.html  _annual_tax_summary.html  _annual_tax_summary_oob.html  _bewirtung_form.html  _bewirtung_list.html  _bewirtung_preview.html  _bewirtung_row.html  _bewirtung_summary.html  _client_created_success.html  _client_details.html  _client_dropdown.html  _client_edit_form.html  _client_form.html  _client_row.html  _client_search_results.html  _client_stats_card.html  _client_table.html  _deadline_row.html  _deadline_row_compact.html  _eur_preview.html  _expense_card.html  _expense_edit_form.html  _expense_form.html  _expense_list.html  _expense_row.html  _expense_rows.html  _extraction_review.html  _gift_at_risk.html  _gift_form.html  _gift_list.html  _gift_recipient_status.html  _gift_row.html  _gift_summary.html  _health_insurance_form.html  _health_insurance_providers.html  _health_insurance_row.html  (+42 more)
tests/: conftest.py  test_api.py  test_einkommensteuer.py  test_llm_config.py  test_llm_tools.py  test_models.py  test_ollama_backend.py  test_umsatzsteuer.py
