[project]
name = "fiscfox"
version = "0.1.0"
description = "Freelance Tax Management System for German Freelancers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "structlog>=24.1",
    # PDF extraction
    "pdfplumber>=0.10",
    "aiofiles>=23.2",
    # OCR support for scanned PDFs
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    # Rate limiting
    "slowapi>=0.1",
    # SSE streaming
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.2",
    "mypy>=1.8",
]
extraction-ai = [
    "anthropic>=0.18",  # Claude API for smart extraction (future)
]
# Desktop app packaging (cross-platform)
# Linux: requires system packages: python3-gi gir1.2-gtk-3.0 gir1.2-webkit2-4.1
# macOS: no extra dependencies needed
# Windows: no extra dependencies needed
desktop = [
    "pywebview>=5.0",               # Native webview wrapper
    "pyinstaller>=6.0",             # Executable bundler
    "numpy>=1.26.0",                # Required by ML features
]
# Machine Learning features (TabPFN 2.5 + supporting models)
ml = [
    "tabpfn>=2.0",                  # TabPFN foundation model for tabular data
    "scikit-learn>=1.4.0",          # ML utilities and fallback models
    "prophet>=1.1.0",               # Time series forecasting (cash flow)
    "hdbscan>=0.8.33",              # Clustering for vendor deduplication
    "joblib>=1.3.0",                # Model serialization
    "numpy>=1.26.0",                # Numerical operations
]
# Local LLM inference (llama.cpp via llama-cpp-python)
llm = [
    "llama-cpp-python>=0.3.0",      # CPU/GPU GGUF model inference
    "outlines>=0.1.0",              # Structured generation (JSON/SQL schemas)
    "psutil>=5.9.0",                # Hardware detection (RAM, CPU)
    "py-cpuinfo>=9.0.0",            # CPU feature detection (AVX2, AVX512)
]
# Advanced OCR with PaddleOCR-VL (expense receipt scanning)
ocr = [
    "paddleocr>=3.0",               # PaddleOCR-VL document parsing
    "paddlepaddle>=3.0",            # PaddlePaddle framework
    "opencv-python>=4.8",           # Image preprocessing
]
# RAG system with vector search + reranking
rag = [
    "sentence-transformers>=2.2.0", # BGE-M3 embeddings + CrossEncoder reranker
    "sqlite-vec>=0.1.0",            # SQLite vector extension (1024 dim)
]
# Ollama backend (use a shared Ollama server instead of in-process llama.cpp)
ollama = [
    "httpx>=0.26",                  # async HTTP client for the Ollama API
]
# Complete LLM stack (inference + RAG)
llm-full = [
    "llama-cpp-python>=0.3.0",
    "outlines>=0.1.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "PL", "UP"]
ignore = [
    "PLR0913",  # Too many arguments
    "PLC0415",  # Import at non-top-level (lazy imports for circular dep avoidance)
    "PLR2004",  # Magic value comparison
    "B008",     # Function call in default arg (FastAPI Depends pattern)
    "E402",     # Module level import not at top (needed for type checking blocks)
    "PLW0603",  # Global statement (acceptable in mock data patterns)
    "E501",     # Line too long (handled by formatter)
    "B007",     # Loop control variable unused (intentional in some patterns)
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLW2901",  # Outer loop variable overwritten
    "F841",     # Unused variables (some are intentional placeholders)
    "B905",     # zip without strict (intentional in some math operations)
    "B904",     # raise without from (context already clear in these cases)
]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
# Disable errors that conflict with Pydantic patterns or are overly strict
# no-any-return: sqlite rows return Any by default
# truthy-function: false positives with translator functions
disable_error_code = ["prop-decorator", "valid-type", "type-arg", "no-any-return", "truthy-function"]

# Pydantic plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Ignore missing stubs for libraries without type hints
[[tool.mypy.overrides]]
module = [
    "pytesseract",
    "pytesseract.*",
    "pdf2image",
    "pdf2image.*",
    "pdfplumber",
    "pdfplumber.*",
    "webview",
    "webview.*",
    "tabpfn",
    "tabpfn.*",
    "prophet",
    "prophet.*",
    "hdbscan",
    "hdbscan.*",
    "sklearn",
    "sklearn.*",
    "joblib",
    "joblib.*",
    # LLM packages
    "llama_cpp",
    "llama_cpp.*",
    "outlines",
    "outlines.*",
    "cpuinfo",
    "cpuinfo.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "sqlite_vec",
    "sqlite_vec.*",
    # OCR packages
    "paddleocr",
    "paddleocr.*",
    "paddle",
    "paddle.*",
    "cv2",
    "cv2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring database setup (deselect with '-m \"not integration\"')",
]
